Guess that is all for tabular data

--- a/nbs/dl1/lesson4-tabular.ipynb
+++ b/nbs/dl1/lesson4-tabular.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "4   Female             0             0              50   United-States   <50k  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -264,133 +264,133 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>Private</td>\n",
-       "      <td>Some-college</td>\n",
-       "      <td>Married-spouse-absent</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>Not-in-family</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Craft-repair</td>\n",
+       "      <td>Husband</td>\n",
        "      <td>White</td>\n",
        "      <td>False</td>\n",
-       "      <td>-0.8493</td>\n",
-       "      <td>1.7675</td>\n",
+       "      <td>0.9098</td>\n",
+       "      <td>-0.2751</td>\n",
+       "      <td>-0.8135</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Craft-repair</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.1163</td>\n",
+       "      <td>0.1767</td>\n",
+       "      <td>-0.0312</td>\n",
+       "      <td>&gt;=50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Self-emp-not-inc</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Craft-repair</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.7632</td>\n",
+       "      <td>0.4109</td>\n",
+       "      <td>-0.4224</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>State-gov</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.4962</td>\n",
+       "      <td>0.6813</td>\n",
+       "      <td>1.1422</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.2292</td>\n",
+       "      <td>-0.4697</td>\n",
+       "      <td>-0.4224</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.9098</td>\n",
+       "      <td>0.3119</td>\n",
+       "      <td>-0.4224</td>\n",
+       "      <td>&gt;=50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>?</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>?</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-1.2891</td>\n",
+       "      <td>3.0330</td>\n",
        "      <td>-0.0312</td>\n",
        "      <td>&lt;50k</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>Self-emp-inc</td>\n",
+       "      <td>Self-emp-not-inc</td>\n",
        "      <td>Some-college</td>\n",
        "      <td>Married-civ-spouse</td>\n",
        "      <td>Exec-managerial</td>\n",
        "      <td>Husband</td>\n",
        "      <td>White</td>\n",
        "      <td>False</td>\n",
-       "      <td>-0.4828</td>\n",
-       "      <td>-1.0542</td>\n",
+       "      <td>-0.2629</td>\n",
+       "      <td>-0.6582</td>\n",
        "      <td>-0.0312</td>\n",
-       "      <td>&gt;=50k</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Private</td>\n",
-       "      <td>Some-college</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Other-service</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>False</td>\n",
-       "      <td>-0.1163</td>\n",
-       "      <td>0.4938</td>\n",
-       "      <td>-0.0312</td>\n",
-       "      <td>&lt;50k</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Federal-gov</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>#na#</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>Asian-Pac-Islander</td>\n",
-       "      <td>True</td>\n",
-       "      <td>-0.3362</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>-0.0312</td>\n",
-       "      <td>&lt;50k</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Private</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Prof-specialty</td>\n",
-       "      <td>Wife</td>\n",
-       "      <td>White</td>\n",
-       "      <td>False</td>\n",
-       "      <td>-0.7760</td>\n",
-       "      <td>0.3310</td>\n",
-       "      <td>1.1422</td>\n",
-       "      <td>&gt;=50k</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Private</td>\n",
-       "      <td>Assoc-acdm</td>\n",
-       "      <td>Never-married</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>Own-child</td>\n",
-       "      <td>White</td>\n",
-       "      <td>False</td>\n",
-       "      <td>-1.1425</td>\n",
-       "      <td>-0.0889</td>\n",
-       "      <td>0.7511</td>\n",
-       "      <td>&lt;50k</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Self-emp-not-inc</td>\n",
-       "      <td>Assoc-voc</td>\n",
-       "      <td>Divorced</td>\n",
-       "      <td>Prof-specialty</td>\n",
-       "      <td>Not-in-family</td>\n",
-       "      <td>White</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.9831</td>\n",
-       "      <td>-0.8147</td>\n",
-       "      <td>0.3599</td>\n",
        "      <td>&lt;50k</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Private</td>\n",
        "      <td>HS-grad</td>\n",
        "      <td>Divorced</td>\n",
-       "      <td>Craft-repair</td>\n",
-       "      <td>Unmarried</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Own-child</td>\n",
        "      <td>White</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.9831</td>\n",
-       "      <td>-0.2531</td>\n",
+       "      <td>-0.6294</td>\n",
+       "      <td>-1.1315</td>\n",
        "      <td>-0.4224</td>\n",
        "      <td>&lt;50k</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Private</td>\n",
-       "      <td>Bachelors</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>Husband</td>\n",
-       "      <td>White</td>\n",
-       "      <td>False</td>\n",
-       "      <td>-0.8493</td>\n",
-       "      <td>0.3674</td>\n",
-       "      <td>1.1422</td>\n",
-       "      <td>&gt;=50k</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Federal-gov</td>\n",
-       "      <td>Assoc-acdm</td>\n",
+       "      <td>Some-college</td>\n",
        "      <td>Married-civ-spouse</td>\n",
        "      <td>Craft-repair</td>\n",
        "      <td>Husband</td>\n",
        "      <td>White</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.8365</td>\n",
-       "      <td>0.3016</td>\n",
-       "      <td>0.7511</td>\n",
-       "      <td>&gt;=50k</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.1769</td>\n",
+       "      <td>2.6521</td>\n",
+       "      <td>-0.0312</td>\n",
+       "      <td>&lt;50k</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,13 +418,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Total time: 00:04 <p><table style='width:375px; margin-bottom:10px'>\n",
+       "Total time: 00:18 <p><table style='width:375px; margin-bottom:10px'>\n",
        "  <tr>\n",
        "    <th>epoch</th>\n",
        "    <th>train_loss</th>\n",
@@ -434,10 +434,10 @@
        "  </tr>\n",
        "  <tr>\n",
        "    <th>0</th>\n",
-       "    <th>0.366692</th>\n",
-       "    <th>0.378935</th>\n",
-       "    <th>0.835000</th>\n",
-       "    <th>00:04</th>\n",
+       "    <th>0.356894</th>\n",
+       "    <th>0.399923</th>\n",
+       "    <th>0.815000</th>\n",
+       "    <th>00:18</th>\n",
        "  </tr>\n",
        "</table>\n"
       ],
@@ -462,52 +462,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "age                                49\n",
+       "age                                45\n",
        "workclass                     Private\n",
-       "fnlwgt                         101320\n",
-       "education                  Assoc-acdm\n",
-       "education-num                      12\n",
+       "fnlwgt                         242391\n",
+       "education                   Bachelors\n",
+       "education-num                      13\n",
        "marital-status     Married-civ-spouse\n",
-       "occupation                        NaN\n",
-       "relationship                     Wife\n",
+       "occupation            Exec-managerial\n",
+       "relationship                  Husband\n",
        "race                            White\n",
-       "sex                            Female\n",
+       "sex                              Male\n",
        "capital-gain                        0\n",
-       "capital-loss                     1902\n",
+       "capital-loss                        0\n",
        "hours-per-week                     40\n",
        "native-country          United-States\n",
        "salary                          >=50k\n",
-       "Name: 0, dtype: object"
+       "Name: 32, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "row = df.iloc[0]\n",
+    "row = df.iloc[32]\n",
     "row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Category <50k, tensor(0), tensor([0.5141, 0.4859]))"
+       "(Category >=50k, tensor(1), tensor([0.1889, 0.8111]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
