--- a/nbs/dl2/01_MatrixMultiplicationFromScratch.ipynb
+++ b/nbs/dl2/01_MatrixMultiplicationFromScratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        " torch.Size([10000])]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "torch.Size([784])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "torch.Size([28, 28])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f092702be10>"
+       "<matplotlib.image.AxesImage at 0x7f483db88828>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0926f32898>"
+       "<matplotlib.image.AxesImage at 0x7f483cae9048>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -270,16 +270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([784, 10]), tensor(-0.0038))"
+       "(torch.Size([784, 10]), tensor(-0.0337))"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "torch.Size([784])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,30 +335,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "randoA = torch.randn(2,4)\n",
     "randoB = torch.randn(4,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 593 µs, sys: 208 µs, total: 801 µs\n",
-      "Wall time: 512 µs\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time matrixMultiplicationResult = naiveMatrixMultiplication(randoA, randoB)"
    ]
   },
   {
@@ -370,8 +352,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 51 µs, sys: 17 µs, total: 68 µs\n",
-      "Wall time: 84.9 µs\n"
+      "CPU times: user 588 µs, sys: 193 µs, total: 781 µs\n",
+      "Wall time: 526 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time matrixMultiplicationResult = naiveMatrixMultiplication(randoA, randoB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 117 µs, sys: 0 ns, total: 117 µs\n",
+      "Wall time: 161 µs\n"
      ]
     }
    ],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "         [30]]), tensor([10, 20, 30]))"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "(torch.Size([3]), torch.Size([3, 1]), torch.Size([3]))"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "        [39, 38, 37]])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "tensor([19, 28, 37])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "tensor(84)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,15 +532,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 810 µs, sys: 0 ns, total: 810 µs\n",
-      "Wall time: 487 µs\n"
+      "CPU times: user 490 µs, sys: 160 µs, total: 650 µs\n",
+      "Wall time: 420 µs\n"
      ]
     }
    ],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "torch.Size([3])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "torch.Size([1, 3])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "        [7]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,16 +628,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0.9916,  0.0172, -1.7137, -0.9334])"
+       "tensor([-2.8861, -0.2526, -0.5010,  1.0893])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,19 +648,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.9916],\n",
-       "        [ 0.0172],\n",
-       "        [-1.7137],\n",
-       "        [-0.9334]])"
+       "tensor([[-2.8861],\n",
+       "        [-0.2526],\n",
+       "        [-0.5010],\n",
+       "        [ 1.0893]])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,19 +671,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.9916],\n",
-       "        [ 0.0172],\n",
-       "        [-1.7137],\n",
-       "        [-0.9334]])"
+       "tensor([[-2.8861],\n",
+       "        [-0.2526],\n",
+       "        [-0.5010],\n",
+       "        [ 1.0893]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,16 +694,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.1602, 2.3930])"
+       "tensor([-4.6307, -1.3023])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,15 +730,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 279 µs, sys: 97 µs, total: 376 µs\n",
-      "Wall time: 243 µs\n"
+      "CPU times: user 214 µs, sys: 70 µs, total: 284 µs\n",
+      "Wall time: 242 µs\n"
      ]
     }
    ],
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,15 +777,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 95 µs, sys: 33 µs, total: 128 µs\n",
-      "Wall time: 135 µs\n"
+      "CPU times: user 141 µs, sys: 47 µs, total: 188 µs\n",
+      "Wall time: 194 µs\n"
      ]
     }
    ],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
        "(torch.Size([2, 4]), torch.Size([4, 2]), torch.Size([2, 2]))"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,15 +831,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 52 µs, sys: 18 µs, total: 70 µs\n",
-      "Wall time: 87.3 µs\n"
+      "CPU times: user 118 µs, sys: 0 ns, total: 118 µs\n",
+      "Wall time: 124 µs\n"
      ]
     }
    ],
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,15 +858,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 44 µs, sys: 16 µs, total: 60 µs\n",
-      "Wall time: 76.5 µs\n"
+      "CPU times: user 117 µs, sys: 0 ns, total: 117 µs\n",
+      "Wall time: 124 µs\n"
      ]
     }
    ],
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,15 +895,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 90 µs, sys: 31 µs, total: 121 µs\n",
-      "Wall time: 126 µs\n"
+      "CPU times: user 129 µs, sys: 43 µs, total: 172 µs\n",
+      "Wall time: 178 µs\n"
      ]
     }
    ],
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,15 +922,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 638 µs, sys: 219 µs, total: 857 µs\n",
-      "Wall time: 449 µs\n"
+      "CPU times: user 473 µs, sys: 154 µs, total: 627 µs\n",
+      "Wall time: 318 µs\n"
      ]
     }
    ],
@@ -940,11 +940,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "testNear(pytorchCudaMatMulResult, expected.cuda())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 01_MatrixMultiplicationFromScratch.ipynb to exp/nb_01.py\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python notebook2script.py 01_MatrixMultiplicationFromScratch.ipynb"
    ]
   },
   {
