Reading mathmatical papers is tuff

--- a/nbs/dl2/02_CNN_From_Scratch.ipynb
+++ b/nbs/dl2/02_CNN_From_Scratch.ipynb
@@ -116,6 +116,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xValidationSetNormalized = normalizeVector(xValidationSet, xValidationSet.mean(), xValidationSet.std())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -126,11 +135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assertNearZero(xTrainingSetNormalized.mean())"
+    "assertNearZero(xTrainingSetNormalized.mean())\n",
+    "assertNearZero(xValidationSetNormalized.mean())"
    ]
   },
   {
@@ -143,11 +153,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assertNearZero(1 - xTrainingSetNormalized.std())"
+    "assertNearZero(1 - xTrainingSetNormalized.std())\n",
+    "assertNearZero(1 - xValidationSetNormalized.std())"
    ]
   },
   {
@@ -242,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -251,14 +262,14 @@
        "(50000, 784, tensor(10))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "xRows, xColumns = xTrainingSetNormalized.shape\n",
-    "largestExpectedResult = yTrainingSet.max() + 1\n",
+    "inputChannels = yTrainingSet.max() + 1\n",
     "(xRows, xColumns, largestExpectedResult)"
    ]
   },
@@ -267,6 +278,31 @@
    "metadata": {},
    "source": [
     "### Convolutional Neural Network Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numberOfHiddenNodes = 50"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Layer Initialization\n",
+    "\n",
+    "Setting each layer in our convolutional network is important. Getting the right set of inital weights can lead to really good outputs. The following layer (done below) will have referenced the paper [Delving Deep into Rectifiers](https://arxiv.org/abs/1502.01852).\n",
+    "\n",
+    "Paper Dictonary\n",
+    "---\n",
+    "- $c$ - Number of Input Channels\n",
+    "- $\\operatorname {Var} [\\vec{v}]$ - Variance of input vector, aka $\\sigma ^{2}$ (sigma squared), \n",
+    "- $\\operatorname {E} [\\vec{v}]$ - Mean of itput vector, aka $\\mu$ (mu)\n",
+    "- $n$ - Number of "
    ]
   },
   {
