Working on Kaiming initialization

--- a/nbs/dl2/02_CNN_From_Scratch.ipynb
+++ b/nbs/dl2/02_CNN_From_Scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linearCombination(vector, matrix, biasVector): return vector @ matrix + biasVector\n",
+    "def reLU(vector): return vector.clamp_min(0.)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +100,7 @@
        "(tensor(0.1304), tensor(0.3073))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,26 +182,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change default color to plasma\n",
-    "plt.rcParams['image.cmap'] = 'plasma'"
+    "plotter.rcParams['image.cmap'] = 'plasma'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f41a71cfe10>"
+       "<matplotlib.image.AxesImage at 0x7f01822db630>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -209,21 +219,21 @@
     }
    ],
    "source": [
-    "plt.imshow(xTrainingSet[69].view(28,28))"
+    "plotter.imshow(xTrainingSet[69].view(28,28))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f41a72f54a8>"
+       "<matplotlib.image.AxesImage at 0x7f018240cdd8>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -241,7 +251,7 @@
     }
    ],
    "source": [
-    "plt.imshow(xTrainingSetNormalized[69].view(28,28))"
+    "plotter.imshow(xTrainingSetNormalized[69].view(28,28))"
    ]
   },
   {
@@ -253,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +272,7 @@
        "(50000, 784, tensor(10))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +280,7 @@
    "source": [
     "xRows, xColumns = xTrainingSetNormalized.shape\n",
     "inputChannels = yTrainingSet.max() + 1\n",
-    "(xRows, xColumns, largestExpectedResult)"
+    "(xRows, xColumns, inputChannels)"
    ]
   },
   {
@@ -282,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +312,192 @@
     "- $c$ - Number of Input Channels\n",
     "- $\\operatorname {Var} [\\vec{v}]$ - Variance of input vector, aka $\\sigma ^{2}$ (sigma squared), \n",
     "- $\\operatorname {E} [\\vec{v}]$ - Mean of itput vector, aka $\\mu$ (mu)\n",
-    "- $n$ - Number of "
+    "- $b$ - Bias Vector\n",
+    "- $n$ - Number of Columns\n",
+    "\n",
+    "##### Section 2.2 Synopsis\n",
+    "Your weighted matrices should be initilaized such that the mean should be zero and the rest are symetrically dispresed around that mean (eg normalized)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Simple Initialization**\n",
+    "\n",
+    "Dividing the tensor by the number of total inputs of the each image brings the mean way down to zero. The distribution is also expected to have a standard deviation $\\sigma$ (sigma) of 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weightedLayerOne = torch.randn(xColumns, numberOfHiddenNodes) / math.sqrt(xColumns)\n",
+    "weightedLayerTwo = torch.randn(numberOfHiddenNodes, 1) / math.sqrt(numberOfHiddenNodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assertNearZero(weightedLayerOne.mean())\n",
+    "assertNearZero(weightedLayerOne.std() - 1/math.sqrt(xColumns))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> We also initialize $b$ = 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "biasVectorLayerOne = torch.zeros(numberOfHiddenNodes)\n",
+    "biasVectorLayerTwo = torch.zeros(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Any linear combination of the initialized layers should have a $\\mu$=0 and $\\sigma$=1 because $y$ is just a linear combination of $\\vec{x}W + \\vec{b}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assertNearZero(xValidationSetNormalized.mean())\n",
+    "assertNearZero(1 - xValidationSetNormalized.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([10000, 784]), torch.Size([784, 50]))"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xValidationSetNormalized.shape, weightedLayerOne.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linearWomboCombo = linearCombination(xValidationSetNormalized, weightedLayerOne, biasVectorLayerOne)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Kaiming Note:**\n",
+    "These should be close to zero because of our initializaitons, but this appears to not be the case.\n",
+    "\n",
+    "_The same goes for `reLU` processed vectors_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(-0.0108), tensor(0.9647))"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linearWomboCombo.mean(), linearWomboCombo.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reLUWomboCombo = reLU(linearCombination(xValidationSetNormalized, weightedLayerOne, biasVectorLayerOne))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.3739), tensor(0.5567))"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reLUWomboCombo.mean(), reLUWomboCombo.std()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Paper Revelation**\n",
+    "\n",
+    "Apparently scaling the intialization matrix down by dividing it by it's standard deviation apparently helps a bunch.\n",
+    "\n",
+    ">This leads to a zero-mean Gaussian distribution whose standard deviation (std) is $\\sqrt {2/n}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kaimingInitializedWeightedMatrixOne = torch.randn(xColumns, numberOfHiddenNodes) * math.sqrt(2/xColumns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assertNearZero(kaimingInitializedWeightedMatrixOne.mean())\n",
+    "assertNearZero(kaimingInitializedWeightedMatrixOne.std() - 1 * math.sqrt(2/xColumns))"
    ]
   },
   {
