Still working on cnn from scratch

--- a/nbs/dl1/lesson3-planet.ipynb
+++ b/nbs/dl1/lesson3-planet.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -54,19 +54,19 @@
      "text": [
       "Collecting kaggle\n",
       "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f4/de/4f22073f3afa618976ee0721b0deb72b5cde2782057e04a815a6828b53f9/kaggle-1.5.4.tar.gz (54kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 61kB 25.8MB/s ta 0:00:01\n",
+      "\u001b[K     |████████████████████████████████| 61kB 21.9MB/s eta 0:00:01\n",
       "\u001b[?25hRequirement already satisfied, skipping upgrade: urllib3<1.25,>=1.21.1 in /home/ubuntu/.local/lib/python3.7/site-packages (from kaggle) (1.22)\n",
       "Requirement already satisfied, skipping upgrade: six>=1.10 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from kaggle) (1.12.0)\n",
-      "Requirement already satisfied, skipping upgrade: certifi in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from kaggle) (2018.11.29)\n",
+      "Requirement already satisfied, skipping upgrade: certifi in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from kaggle) (2019.6.16)\n",
       "Requirement already satisfied, skipping upgrade: python-dateutil in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from kaggle) (2.7.5)\n",
       "Requirement already satisfied, skipping upgrade: requests in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from kaggle) (2.21.0)\n",
       "Requirement already satisfied, skipping upgrade: tqdm in /home/ubuntu/.local/lib/python3.7/site-packages (from kaggle) (4.31.1)\n",
       "Requirement already satisfied, skipping upgrade: python-slugify in /home/ubuntu/.local/lib/python3.7/site-packages (from kaggle) (2.0.1)\n",
-      "Requirement already satisfied, skipping upgrade: idna<2.9,>=2.5 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests->kaggle) (2.8)\n",
       "Requirement already satisfied, skipping upgrade: chardet<3.1.0,>=3.0.2 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests->kaggle) (3.0.4)\n",
+      "Requirement already satisfied, skipping upgrade: idna<2.9,>=2.5 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests->kaggle) (2.8)\n",
       "Requirement already satisfied, skipping upgrade: Unidecode>=0.04.16 in /home/ubuntu/.local/lib/python3.7/site-packages (from python-slugify->kaggle) (1.0.23)\n",
       "Building wheels for collected packages: kaggle\n",
-      "  Running setup.py bdist_wheel for kaggle ... \u001b[?25ldone\n",
+      "  Building wheel for kaggle (setup.py) ... \u001b[?25ldone\n",
       "\u001b[?25h  Stored in directory: /home/ubuntu/.cache/pip/wheels/87/ea/09/173986e395d051411b9d547a69fe96cdc26208cb1bcc3e5567\n",
       "Successfully built kaggle\n",
       "Installing collected packages: kaggle\n",
@@ -92,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! mkdir -p ~/.kaggle/\n",
-    "# ! mv kaggle.json ~/.kaggle/\n",
-    "# ! chmod 600 /home/ubuntu/.kaggle/kaggle.json\n",
+    "! mkdir -p ~/.kaggle/\n",
+    "! mv kaggle.json ~/.kaggle/\n",
+    "! chmod 600 /home/ubuntu/.kaggle/kaggle.json\n",
     "\n",
     "# For Windows, uncomment these two commands\n",
     "# ! mkdir %userprofile%\\.kaggle\n",
@@ -258,81 +258,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image_name</th>\n",
-       "      <th>tags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>train_0</td>\n",
-       "      <td>haze primary</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>train_1</td>\n",
-       "      <td>agriculture clear primary water</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>train_2</td>\n",
-       "      <td>clear primary</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>train_3</td>\n",
-       "      <td>clear primary</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>train_4</td>\n",
-       "      <td>agriculture clear habitation primary road</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  image_name                                       tags\n",
-       "0    train_0                               haze primary\n",
-       "1    train_1            agriculture clear primary water\n",
-       "2    train_2                              clear primary\n",
-       "3    train_3                              clear primary\n",
-       "4    train_4  agriculture clear habitation primary road"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-72711567e218>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m'train_v2.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'path' is not defined"
+     ]
     }
    ],
    "source": [
+    "\n",
     "df = pd.read_csv(path/'train_v2.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd."
    ]
   },
   {
@@ -2302,7 +2255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
