--- a/nbs/dl1/lesson3-imdb.ipynb
+++ b/nbs/dl1/lesson3-imdb.ipynb
@@ -51,8 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/home/ubuntu/.fastai/data/imdb_sample/texts.csv'),\n",
-       " PosixPath('/home/ubuntu/.fastai/data/imdb_sample/data_save.pkl')]"
+       "[PosixPath('/home/ubuntu/.fastai/data/imdb_sample/texts.csv')]"
       ]
      },
      "execution_count": 3,
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,6 +224,15 @@
    "outputs": [],
    "source": [
     "data = load_data(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc(TextClasDataBunch.from_df)"
    ]
   },
   {
@@ -453,11 +461,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc(TextList.from_csv)"
+    "doc(TextList.split_by_rand_pct)"
    ]
   },
   {
@@ -489,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -517,11 +525,10 @@
        " PosixPath('/home/ubuntu/.fastai/data/imdb/unsup'),\n",
        " PosixPath('/home/ubuntu/.fastai/data/imdb/train'),\n",
        " PosixPath('/home/ubuntu/.fastai/data/imdb/tmp_lm'),\n",
-       " PosixPath('/home/ubuntu/.fastai/data/imdb/data_lm.pkl'),\n",
        " PosixPath('/home/ubuntu/.fastai/data/imdb/imdb.vocab')]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +552,7 @@
        " PosixPath('/home/ubuntu/.fastai/data/imdb/train/labeledBow.feat')]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,6 +604,35 @@
     "We have to use a special kind of `TextDataBunch` for the language model, that ignores the labels (that's why we put 0 everywhere), will shuffle the texts at each epoch before concatenating them all together (only for training, we don't shuffle for the validation set) and will send batches that read that text in order with targets that are the next word in the sentence.\n",
     "\n",
     "The line before being a bit long, we want to load quickly the final ids by using the following cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_lm.backwards = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(90000,)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_lm.items.shape"
    ]
   },
   {
@@ -661,11 +697,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "doc(AWD_LSTM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc(language_model_learneruage_model_learner)"
    ]
   },
   {
@@ -677,11 +722,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "learn = language_model_learner(data_lm, AWD_LSTM, drop_mult=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SequentialRNN(\n",
+       "  (0): AWD_LSTM(\n",
+       "    (encoder): Embedding(60000, 400, padding_idx=1)\n",
+       "    (encoder_dp): EmbeddingDropout(\n",
+       "      (emb): Embedding(60000, 400, padding_idx=1)\n",
+       "    )\n",
+       "    (rnns): ModuleList(\n",
+       "      (0): WeightDropout(\n",
+       "        (module): LSTM(400, 1152, batch_first=True)\n",
+       "      )\n",
+       "      (1): WeightDropout(\n",
+       "        (module): LSTM(1152, 1152, batch_first=True)\n",
+       "      )\n",
+       "      (2): WeightDropout(\n",
+       "        (module): LSTM(1152, 400, batch_first=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (input_dp): RNNDropout()\n",
+       "    (hidden_dps): ModuleList(\n",
+       "      (0): RNNDropout()\n",
+       "      (1): RNNDropout()\n",
+       "      (2): RNNDropout()\n",
+       "    )\n",
+       "  )\n",
+       "  (1): LinearDecoder(\n",
+       "    (decoder): Linear(in_features=400, out_features=60000, bias=True)\n",
+       "    (output_dp): RNNDropout()\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "learn.model"
    ]
   },
   {
@@ -1372,7 +1465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
