--- a/nbs/dl1/lesson2-sgd-cubic.ipynb
+++ b/nbs/dl1/lesson2-sgd-cubic.ipynb
@@ -998,7 +998,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_fastai",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1012,7 +1012,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
